--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,8 @@
     --bs-primary: #f89e1a;
     --bs-primary-rgb: 248, 158, 26;
 
-    --bs-secondary: #2d333b;
-    --bs-secondary-rgb: 45, 51, 59;
+    --bs-secondary: #565b62;
+    --bs-secondary-rgb: 86, 91, 98;
     --bs-secondary-color: rgba(197, 209, 222, 0.75);
     
     --bs-success: #54c95c;
@@ -21,11 +21,11 @@
     --bs-danger: #ff4b5d;
     --bs-danger-rgb: 255, 75, 93;
     
-    --bs-light: #2d333b;
-    --bs-light-rgb: 45, 51, 59;
+    --bs-light: #818489;
+    --bs-light-rgb: 129, 132, 137;
 
-    --bs-dark: #1c2128;
-    --bs-dark-rgb: 28, 33, 40;    
+    --bs-dark: #2d333b;
+    --bs-dark-rgb: 45, 51, 59;    
     
     --bs-green: #00ff00;
     --bs-yellow: #ffff00;
@@ -36,7 +36,7 @@
     --bs-body-line-height: 1.5;
     --bs-body-color: #c5d1de;
     --bs-body-color-rgb: 197, 209, 222;
-    --bs-body-bg: #22272e;
+    --bs-body-bg: #24282f;
     --bs-body-bg-rgb: 34, 39, 46;
 
     --bs-link-color: var(--bs-primary);
@@ -48,8 +48,8 @@
     --bs-border-width: 2px;
     --bs-border-style: solid;
     --bs-border-color: #444c56;
-    --bs-border-color-translucent: rgba(255, 255, 255, 0.125);
-    --bs-border-radius: 0.25rem;
+    --bs-border-color-translucent: rgba(0, 0, 0, 0.5);
+    --bs-border-radius: 0.5rem;
     
     --bs-box-shadow: 0px 0.5rem 0.5rem 5px rgba(0, 0, 0, 0.15);
 }
@@ -250,7 +250,7 @@ a {
     --bs-btn-color: var(--bs-body-color);
     --bs-btn-bg: transparent;
     --bs-btn-border-width: var(--bs-border-width);
-    --bs-btn-border-color: var(--bs-border-color);
+    --bs-btn-border-color: var(--bs-border-color-translucent);
     --bs-btn-border-radius: var(--bs-border-radius);
     --bs-btn-hover-border-color: transparent;
     --bs-btn-disabled-opacity: .5;
@@ -453,15 +453,15 @@ a {
     --bs-card-spacer-x: calc(var(--bs-spacer) * .75);
     --bs-card-title-spacer-y: calc(var(--bs-spacer) * .5);
     --bs-card-border-width: var(--bs-border-width);
-    --bs-card-border-color: var(--bs-border-color);
+    --bs-card-border-color: var(--bs-border-color-translucent);
     --bs-card-border-radius: var(--bs-border-radius);
-    --bs-card-inner-border-radius: calc(var(--bs-border-radius) -(var(--bs-border-width)));
+    --bs-card-inner-border-radius: var(--bs-border-radius);
     --bs-card-cap-padding-y: calc(var(--bs-spacer) * .5);
     --bs-card-cap-padding-x: calc(var(--bs-spacer) * .75);
     --bs-card-cap-bg: var(--bs-secondary);
     --bs-card-cap-color: var(--bs-white);
     --bs-card-color: var(--bs-body-color);
-    --bs-card-bg: var(--bs-body-bg);
+    --bs-card-bg: var(--bs-dark);
     
     box-shadow: var(--bs-box-shadow);
 }
@@ -470,7 +470,7 @@ a {
 
     --bs-list-group-color: var(--bs-body-color);
     --bs-list-group-bg: var(--bs-body-bg);
-    --bs-list-group-border-color: var(--bs-border-color);
+    --bs-list-group-border-color: var(--bs-border-color-translucent);
     --bs-list-group-border-width: var(--bs-border-width);
     --bs-list-group-border-radius: var(--bs-border-radius);
     --bs-list-group-item-padding-x: calc(var(--bs-spacer) * .5);
@@ -496,7 +496,7 @@ a {
     --bs-dropdown-font-size: var(--bs-body-font-size);
     --bs-dropdown-color: var(--bs-body-color);
     --bs-dropdown-bg: var(--bs-secondary);
-    --bs-dropdown-border-color: var(--bs-border-color);
+    --bs-dropdown-border-color: var(--bs-border-color-translucent);
     --bs-dropdown-border-radius: var(--bs-border-radius);
     --bs-dropdown-border-width: var(--bs-border-width);
     --bs-dropdown-divider-bg: var(--bs-border-color);
@@ -552,11 +552,12 @@ a {
 }
 
 .nav-tabs {
-    
-    --bs-nav-tabs-link-hover-border-color: transparent transparent var(--bs-border-color);
+
+    --bs-nav-tabs-border-color: var(--bs-border-color-translucent);    
+    --bs-nav-tabs-link-hover-border-color: transparent transparent var(--bs-nav-tabs-border-color);
     --bs-nav-tabs-link-active-color: #fff;
     --bs-nav-tabs-link-active-bg: var(--bs-secondary);
-    --bs-nav-tabs-link-active-border-color: var(--bs-border-color) var(--bs-border-color) var(--bs-primary);
+    --bs-nav-tabs-link-active-border-color: var(--bs-nav-tabs-border-color) var(--bs-nav-tabs-border-color) var(--bs-primary);
 }
 
 .table {
