--- a/styles/styles.css
+++ b/styles/styles.css
@@ -425,20 +425,20 @@ a {
     font-weight: var(--bs-body-font-weight);
     line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
-    background-color: var(--bs-dark);
+    background-color: var(--bs-body-bg);
     border: var(--bs-border-width) solid var(--bs-border-color-translucent);
     border-radius: var(--bs-border-radius);
 }
 .form-control:focus {
     
     color: var(--bs-body-color);
-    background-color: var(--bs-dark);
+    background-color: var(--bs-body-bg);
     border-color: var(--bs-primary);
     box-shadow: 0 0 0 .25rem rgba(var(--bs-primary-rgb), .25);
 }
 .form-control:disabled {
     
-    background-color: var(--bs-dark);
+    background-color: var(--bs-body-bg);
     opacity: .25;
 }
 
