--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@
     --bs-primary: #f89e1a;
     --bs-primary-rgb: 248, 158, 26;
 
-    --bs-secondary: #565b62;
-    --bs-secondary-rgb: 86, 91, 98;
+    --bs-secondary: #4d5158;
+    --bs-secondary-rgb: 77, 81, 88;
     --bs-secondary-color: rgba(197, 209, 222, 0.75);
     
     --bs-success: #64ef6d;
